# openfo3

./: .gitignore  CMakeLists.txt  checklist.txt
.codex/skills/openfo3-playtest/: SKILL.md
apps/components_tests/: CMakeLists.txt
apps/components_tests/esm4/: includes.cpp
apps/components_tests/esmterrain/: teststorage.cpp
apps/components_tests/nifosg/: testnifloader.cpp
apps/components_tests/openfo3/: testplayerstate.cpp
apps/components_tests/resource/: testimagemanager.cpp
apps/launcher/: CMakeLists.txt  datafilespage.cpp  datafilespage.hpp  main.cpp  maindialog.cpp  maindialog.hpp
apps/openfo3/: CMakeLists.txt  contentstore.cpp  contentstore.hpp  engine.cpp  engine.hpp  main.cpp  options.cpp  options.hpp  playerstate.cpp  playerstate.hpp
apps/openmw/mwclass/: esm4npc.cpp  esm4npc.hpp
apps/openmw/mwrender/: esm4npcanimation.cpp
components/: CMakeLists.txt
components/esm4/: loadappa.cpp  loadarma.cpp  loadavif.cpp  loadavif.hpp  loadbook.cpp  loadbook.hpp  loadcell.cpp  loadland.cpp  loadnote.cpp  loadnote.hpp  loadnpc.cpp  loadnpc.hpp  loadperk.cpp  loadperk.hpp  loadrefr.cpp  loadrefr.hpp  loadwrld.cpp  reader.cpp  records.hpp
components/esmterrain/: storage.cpp  storage.hpp
components/files/: configurationmanager.cpp
components/nif/: niffile.cpp
components/nifosg/: controller.cpp  controller.hpp  nifloader.cpp
components/process/: processinvoker.cpp  processinvoker.hpp
components/resource/: imagemanager.cpp
components/shader/: shadervisitor.cpp
docs/: openfo3-gameplay-roadmap.md  openfo3-plan.md
(+10 files in other folders)
